k8s/templates/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gs-inv-dev
  labels:
    app.kubernetes.io/name: gs-inv-mgmt
    app.kubernetes.io/part-of: goldenstackers
    env: dev
