k8s/templates/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gs-inv-service
  labels:
    app.kubernetes.io/name: gs-inv-mgmt
    env: dev
spec:
  selector:
    app: gs-inv-app
  ports:
    - name: http
      port: 80
      targetPort: 8501
  type: ClusterIP
