k8s/templates/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gs-inv-ingress
  labels:
    app.kubernetes.io/name: gs-inv-mgmt
    env: dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - dev-inventory.goldenstackers.com
      secretName: gs-inv-dev-tls
  rules:
    - host: dev-inventory.goldenstackers.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gs-inv-service
                port:
                  number: 80
